test/corpus/quote.txt
================================================================================
Carryover Tag on quote
================================================================================
> quote1 item
+color
> quote1 item
>> quote2 item
--------------------------------------------------------------------------------

(document
  (quote
    (quote1)
    (quote1
      (carryover_tag)
      (quote2))))
